--- a/about.html
+++ b/about.html
@@ -22,12 +22,13 @@
         <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
         <!--[if lt IE 9]><script src="./assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
         <script src="./assets/js/ie-emulation-modes-warning.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="./assets/js/vendor/jquery.min.js"><\/script>')</script>
         <script src="./dist/js/bootstrap.min.js"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
@@ -37,31 +38,11 @@
 
         <!-- load handlebars for templating, and create a template -->
         <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-        <script src="./javascripts/handlebars_helper.js"></script>
-        <script id="item-template" type="text/x-handlebars-template">
-            <div class="card-template">
 
-                <div>
-                    {{# cpython_type }}
-                    <strong>Issue: <span class="label label-primary">
-                        <a href="https://bugs.python.org/issue{{issue_id}}" target="_blank">{{issue_id}}</a>
-                    </span></strong>
-                    {{ else }}
-                    <strong>Pull request: <span class="label label-primary">
-                        <a href="https://github.com/python/{{repo_name}}/pull/{{issue_id}}" target="_blank">{{issue_id}}</a>
-                    </span></strong>
-                    {{/ cpython_type }}
-                </div>
-                <div>
-                    <div>{{commit_msg}}</div>
-                    <div><cite>committed by @{{committer}}</cite></div>
-                </div>
-            </div>
-        </script>
-        <script type="text/javascript" src="./contrib_data.js"></script>
     </head>
 
     <body data-gr-c-s-loaded="true">
+
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -75,42 +56,47 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="./index.html">Timeline</a></li>
-                        <li><a href="./about.html">About</a></li>
+                        <li><a href="./index.html">Timeline</a></li>
+                        <li class="active"><a href="./about.html">About</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
 
         <div class="container">
-            <div class="starter-template">
-                <div>
-                    <h1>Mariatta's Contributions to Python Timeline</h1>
-                    <h5>Python, we can't just be friends anymore...</h5>
-                </div>
-
-
-                <div id="visualization">
-                    <div class="menu">
-                        <button class="btn btn-primary btn-xs" type="button" id="zoomIn">
-                            <i class="fa fa-search-minus fa-lg fa-fw" aria-hidden="true"></i> Zoom In
-                        </button>
-                        <button class="btn btn-primary btn-xs" type="button" id="zoomOut">
-                            <i class="fa fa-search-plus fa-lg fa-fw" aria-hidden="true"></i> Zoom Out</button>
-                        <button class="btn btn-primary btn-xs" type="button" id="moveLeft">
-                            <i class="fa fa-angle-left fa-lg fa-fw" aria-hidden="true"></i> Move Left</button>
-                        <button class="btn btn-primary btn-xs" type="button" id="moveRight">
-                        <i class="fa fa-angle-right fa-lg fa-fw" aria-hidden="true"></i> Move Right</button>
+            <div class="inner-container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <img class="img-circle" src="./images/Mariatta.jpg">
+                        <h2>Mariatta</h2>
+                        <p>
+                            <a href="https://twitter.com/Mariatta" target="_blank"><i class="fa fa-twitter fa-2x fa-fw" aria-hidden="true"></i></a>
+                            <a href="https://github.com/Mariatta" target="_blank"><i class="fa fa-github fa-2x fa-fw" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/Mariatta" target="_blank"><i class="fa fa-linkedin fa-2x fa-fw" aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/mariatta81/" target="_blank"><i class="fa fa-instagram fa-2x fa-fw" aria-hidden="true"></i></a>
+                        </p>
+                        <p>
+                            <a href="http://www.imdb.com/name/nm7641957/" class="btn btn-primary btn-lg" role="button" target="_blank">
+                                <i class="fa fa-imdb fa-lg fa-fw" aria-hidden="true"></i> Filmography
+                            </a>
+                        </p>
+                    </div>
+                    <div class="col-lg-8 content">
+                        <p>
+                            Hi there! I'm a newbie contributor to Python :)
+                            I started in summer of 2016, and I'm really grateful to have @guidovanrossum as my mentor.
+                        </p>
+                        <p>I'm still just playing catch up with Python. Let's hope that I can keep this up :)</p>
+                        <p>Many thanks to Python core developers who helped review and accept my patches.</p>
+                        <p>
+                            <a href="https://github.com/Mariatta/mariatta" class="btn btn-success btn-lg" role="button" target="_blank">
+                                <i class="fa fa-github fa-lg fa-fw" aria-hidden="true"></i> View on GitHub
+                            </a>
+                        </p>
                     </div>
                 </div>
+
             </div>
         </div>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-
-    <script type="text/javascript" src="./my_timeline.js"></script>
-
-
     </body>
 </html>
