--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.16.1/vis.min.js"></script>
 
         <!-- load handlebars for templating, and create a template -->
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-        <script src="./javascripts/handlebars_helper.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
         <script id="item-template" type="text/x-handlebars-template">
             <div class="card-template">
 
