--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                     <div class="col-lg-8 content">
                         <p>
                             Hi there! I'm a newbie contributor to Python :)
-                            I started in summer of 2016, and I'm really grateful to have @guidovanrossum as my mentor.
+                            I started in summer of 2016, and I'm really grateful to have Guido van Rossum as my mentor.
                         </p>
                         <p>I'm still just playing catch up with Python. Let's hope that I can keep this up :)</p>
                         <p>Many thanks to Python core developers who helped review and accept my patches.</p>
