--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div>
                     <div>{{commit_msg}}</div>
-                    <div><cite>committed by <a href="https://github.com/{{committer}}" target="_blank">{{committer}}</a></cite></div>
+                    <div><cite>committed by <a href="https://github.com/{{committer}}" target="_blank">{{committer}}</a> on {{start}}</cite></div>
                 </div>
             </div>
         </script>
