lol zoom in/out icon need switching

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 <div id="visualization">
                     <div class="menu">
                         <button class="btn btn-primary btn-xs" type="button" id="zoomIn">
-                            <i class="fa fa-search-minus fa-lg fa-fw" aria-hidden="true"></i> Zoom In
+                            <i class="fa fa-search-plus fa-lg fa-fw" aria-hidden="true"></i> Zoom In
                         </button>
                         <button class="btn btn-primary btn-xs" type="button" id="zoomOut">
-                            <i class="fa fa-search-plus fa-lg fa-fw" aria-hidden="true"></i> Zoom Out</button>
+                            <i class="fa fa-search-minus fa-lg fa-fw" aria-hidden="true"></i> Zoom Out</button>
                         <button class="btn btn-primary btn-xs" type="button" id="moveLeft">
                             <i class="fa fa-angle-left fa-lg fa-fw" aria-hidden="true"></i> Move Left</button>
                         <button class="btn btn-primary btn-xs" type="button" id="moveRight">
