Add commit history tab

--- a/about.html
+++ b/about.html
@@ -57,6 +57,7 @@
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="./index.html">Timeline</a></li>
+                        <li><a href="./linear.html">Commit History</a></li>
                         <li class="active"><a href="./about.html">About</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -84,7 +85,7 @@
                     <div class="col-lg-8 content">
                         <p>
                             Hi there! I'm a newbie contributor to Python :)
-                            I started in summer of 2016, and I'm really grateful to have Guido van Rossum as my mentor.
+                            I started contributing in summer of 2016, and I'm really grateful to have Guido van Rossum as my mentor.
                         </p>
                         <p>I'm still just playing catch up with Python. Let's hope that I can keep this up :)</p>
                         <p>Many thanks to Python core developers who helped review and accept my patches.</p>
