--- a/index.html
+++ b/index.html
@@ -56,13 +56,17 @@
             </div>
         </script>
         <script type="text/javascript" src="./contrib_data.js"></script>
+        <script type="text/javascript">var switchTo5x=true;</script>
+        <script type="text/javascript" id="st_insights_js" src="https://ws.sharethis.com/button/buttons.js?publisher=32253fc8-960f-4832-848c-5df4549a9e29"></script>
+        <script type="text/javascript" src="https://ss.sharethis.com/loader.js"></script>
+
     </head>
 
     <body data-gr-c-s-loaded="true">
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -109,6 +113,10 @@
 
     <script type="text/javascript" src="./my_timeline.js"></script>
 
-
+    <script type="text/javascript">stLight.options({publisher: "32253fc8-960f-4832-848c-5df4549a9e29", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+    <script>
+    var options={ "publisher": "32253fc8-960f-4832-848c-5df4549a9e29", "position": "right", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "twitter", "googleplus", "linkedin"]}};
+    var st_hover_widget = new sharethis.widgets.hoverbuttons(options);
+    </script>
     </body>
 </html>
