move js to javascripts folder

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </script>
-        <script type="text/javascript" src="./contrib_data.js"></script>
+        <script type="text/javascript" src="./javascripts/contrib_data.js"></script>
     </head>
 
     <body data-gr-c-s-loaded="true">
@@ -103,6 +103,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 
-    <script type="text/javascript" src="./my_timeline.js"></script>
+    <script type="text/javascript" src="./javascripts/my_timeline.js"></script>
     </body>
 </html>
