--- a/linear.html
+++ b/linear.html
@@ -34,7 +34,7 @@
 
         <!-- load handlebars for templating, and create a template -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-        <script type="text/javascript" src="./contrib_data.js"></script>
+        <script type="text/javascript" src="./javascripts/contrib_data.js"></script>
 
         <script id="timeline-template" type="text/x-handlebars-template">
             {{#each contrib_data}}
@@ -116,9 +116,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-
-    <script type="text/javascript" src="./commit_history.js"></script>
-
+    <script type="text/javascript" src="./javascripts/commit_history.js"></script>
 
     </body>
 </html>
