add github link on header

--- a/about.html
+++ b/about.html
@@ -55,6 +55,11 @@
                         <li><a href="./linear.html">Commit History</a></li>
                         <li class="active"><a href="./about.html">About</a></li>
                     </ul>
+                    <div class="pull-right">
+                        <ul class="nav navbar-nav">
+                            <li><a href="https://github.com/Mariatta/mariatta" target="_blank"><i class="fa fa-github fa-lg fa-fw" aria-hidden="true"></i> View on GitHub</a></li>
+                        </ul>
+                    </div>
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
@@ -84,11 +89,7 @@
                         </p>
                         <p>I'm still just playing catch up with Python. Let's hope that I can keep this up :)</p>
                         <p>Many thanks to Python core developers who helped review and accept my patches.</p>
-                        <p>
-                            <a href="https://github.com/Mariatta/mariatta" class="btn btn-success btn-lg" role="button" target="_blank">
-                                <i class="fa fa-github fa-lg fa-fw" aria-hidden="true"></i> View on GitHub
-                            </a>
-                        </p>
+
                     </div>
                 </div>
 
