--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
                         <li><a href="./linear.html">Commit History</a></li>
                         <li><a href="./about.html">About</a></li>
                     </ul>
+                    <div class="pull-right">
+                        <ul class="nav navbar-nav">
+                            <li><a href="https://github.com/Mariatta/mariatta" target="_blank"><i class="fa fa-github fa-lg fa-fw" aria-hidden="true"></i> View on GitHub</a></li>
+                        </ul>
+                    </div>
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
