--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://use.fontawesome.com/755c106bdd.js"></script>
+        <script src="./javascripts/moment.js"></script
         <script src="./dist/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.16.1/vis.min.js"></script>
 
