--- a/linear.html
+++ b/linear.html
@@ -61,6 +61,11 @@
                     </div>
                     <div class="timeline-body">
                         <div>committed by <strong><a href="https://github.com/{{committer}}" target="_blank">{{committer}}</a></strong> on {{start}}</div>
+                        {{# has_age }}
+                            <div><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i> {{age}}</div>
+                        {{else}}
+                            <div><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i> within hours</div>
+                        {{/ has_age }}
                     </div>
                 </div>
             </li>
