--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div>
                     <div>{{commit_msg}}</div>
-                    <div><i class="fa fa-code-fork fa-fw fa-rotate-180" aria-hidden="true"></i><cite>committed by <strong><a href="https://github.com/{{committer}}" target="_blank">{{committer}}</a></strong> on {{start}}</cite></div>
+                    <div><i class="fa fa-code-fork fa-fw" aria-hidden="true"></i><cite>committed by <strong><a href="https://github.com/{{committer}}" target="_blank">{{committer}}</a></strong> on {{start}}</cite></div>
                     {{# has_age }}
                         <div><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i> patch age: {{age}}</div>
                     {{else}}
