--- a/linear.html
+++ b/linear.html
@@ -60,7 +60,7 @@
                         {{/ cpython_type }}
                     </div>
                     <div class="timeline-body">
-                        <div><i class="fa fa-code-fork fa-fw fa-rotate-180" aria-hidden="true"></i> committed by <strong><a href="https://github.com/{{committer}}" target="_blank">{{committer}}</a></strong> on {{start}}</div>
+                        <div><i class="fa fa-code-fork fa-fw" aria-hidden="true"></i> committed by <strong><a href="https://github.com/{{committer}}" target="_blank">{{committer}}</a></strong> on {{start}}</div>
                         {{# has_age }}
                             <div><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i> patch age: {{age}}</div>
                         {{else}}
