add commit summary

--- a/linear.html
+++ b/linear.html
@@ -77,6 +77,7 @@
                 <span class="label label-pythondotorg">pythondotorg <span class="badge">{{pythondotorg}}</span></span>
                 <span class="label label-devguide">devguide <span class="badge">{{devguide}}</span></span>
                 <span class="label label-peps">peps <span class="badge">{{peps}}</span></span>
+                <span class="label label-planet">planet <span class="badge">{{planet}}</span></span>
             </div>
         </script>
     </head>
