--- a/about.html
+++ b/about.html
@@ -85,10 +85,10 @@
                     <div class="col-lg-8 content">
                         <p>
                             Hi there! I'm a newbie contributor to Python :)
-                            I started contributing in summer of 2016, and I'm really grateful to have Guido van Rossum as my mentor.
+                            I started contributing in summer of 2016 (Thanks Guido van Rossum for mentoring me).
                         </p>
-                        <p>I'm still just playing catch up with Python. Let's hope that I can keep this up :)</p>
-                        <p>Many thanks to Python core developers who helped review and accept my patches.</p>
+                        <p>I'm still just playing catch up with Python. I made this to keep track of my own work and to stay motivated :)</p>
+                        <p>Many thanks to Python core developers who helped review and accept my patches. :D</p>
 
                     </div>
                 </div>
