update about page

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                             Hi there! I'm a newbie contributor to Python :)
                             I started contributing in summer of 2016 (Thanks Guido van Rossum for mentoring me).
                         </p>
-                        <p>I'm still just playing catch up with Python. I made this to keep track of my own work and to stay motivated :)</p>
+                        <p>I'm still just playing catch up with Python. I made this to keep track of my own work and to stay motivated :) (and also to learn this new JS framework)</p>
                         <p>Many thanks to Python core developers who helped review and accept my patches. :D</p>
 
                     </div>
