--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
 
         <div class="container">
             <div class="starter-template">
-                
+                 <div>
+                     <h1>Mariatta's commit history to Python</h1>
+ -                </div>
                 <div id="visualization">
                     <div class="menu">
                         <button class="btn btn-primary btn-xs" type="button" id="zoomIn">
